Fix spacing issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -406,7 +406,7 @@ nav h2 a:hover,
   #jobs {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr;
+    grid-template-rows: auto auto auto;
   }
 
   #iit {
